--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts2.js"></script>
   </head>
   <body>
     <div class="container">
       <h1>Boop Beep To You Too Dave!</h1>
       <form id="survey">
-        <label for="inputString">Type in a number, and we'll do something funny with it. We promise.</label>
-        <input type="text" class="form-control" id="inputString" placeholder="Please enter your number here">
-        <button type="submit" class="btn btn-warning">Submit</button>
+        <label for="phrase">Type in a number, and we'll do something funny with it. We promise.</label>
+        <input type="text" class="form-control" id="phrase" placeholder="Please enter your number here">
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-      <div id="result">
-        <p>Your result is <span id="finalAnswer"></span></p>
-      </div>
-
+      <div class="container output-box">
+     <h3>Here is your translation!</h3>
+     <p id="output"></p>
+   </div>
     </div><!--close container-->
 
   </body>
