--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <input type="text" class="form-control" id="phrase" placeholder="Please enter your number here">
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-      <div class="container output-box">
-     <h3>Here is your translation!</h3>
-     <p id="output"></p>
-   </div>
+      <div class="results-container output-box">
+        <h3>Here is your translation!</h3>
+        <p id="output"></p>
+      </div>
     </div><!--close container-->
 
   </body>
