Add content to README

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <input type="text" class="form-control" id="phrase" placeholder="Please enter your number here">
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-      <div class="results-container output-box">
+      </div>
+      <div class="output-box">
         <h3>Here is your translation!</h3>
         <p id="output"></p>
       </div>
